# trampolines

./: .gitignore  README.md  conda_environment.yml  coordinates_calculation.ipynb  get_images.py  predict.ipynb  pyproject.toml  requirements.txt  split_data.ipynb  split_data.py  trampolines.yaml  visualisation.ipynb
output/: Oslo_Center.csv  Oslo_E.csv
